openshiftSamples/openshift-deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: springboot-app-prod
  namespace: ${OPENSHIFT_PROJECT_NAME}
spec:
  replicas: 1
  selector:
    app: springboot-app-prod
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: springboot-app-prod
    spec:
      containers:
      - name: springboot-app-prod
        image: ${OPENSHIFT_REGISTRY_URL}/${OPENSHIFT_PROJECT_NAME}/${DOCKER_IMAGE_NAME}:latest
        ports:
        - containerPort: 8080
