openshiftSamples/openshift-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-prod
  namespace: ${OPENSHIFT_PROJECT_NAME}
spec:
  selector:
    app: springboot-app-prod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
